tests/snapshots/codegen_snapshot_tests__rfc046_computed_properties.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
pub trait Named {
    fn label(&self) -> String;
}
#[derive(Debug, Clone, incan_derive::FieldInfo, incan_derive::IncanClass)]
pub struct Money {
    pub cents: i64,
}
impl Money {
    pub fn dollars(&self) -> i64 {
        return self.cents + 1;
    }
    fn label(&self) -> String {
        return "money".to_string();
    }
    /// Returns field metadata for this type.
    pub fn __fields__(
        &self,
    ) -> incan_stdlib::frozen::FrozenList<incan_stdlib::reflection::FieldInfo> {
        static __INCAN_FIELDS: [incan_stdlib::reflection::FieldInfo; 1] = [
            incan_stdlib::reflection::FieldInfo {
                name: incan_stdlib::frozen::FrozenStr::new("cents"),
                alias: None,
                description: None,
                wire_name: incan_stdlib::frozen::FrozenStr::new("cents"),
                type_name: incan_stdlib::frozen::FrozenStr::new("int"),
                has_default: false,
                extra: incan_stdlib::frozen::FrozenDict::new(&[]),
            },
        ];
        incan_stdlib::frozen::FrozenList::new(&__INCAN_FIELDS)
    }
}
impl Named for Money {
    fn label(&self) -> String {
        return "money".to_string();
    }
}
pub fn property_total(value: Money) -> i64 {
    return value.dollars() + value.cents;
}
