tests/snapshots/codegen_snapshot_tests__rfc049_if_let_while_let.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[allow(dead_code)]
fn first(opt: Option<i64>) -> i64 {
    match opt {
        Some(value) => {
            return value;
        }
        _ => {}
    }
    return 0;
}
#[allow(dead_code)]
fn sum_once(opt: Option<i64>) -> i64 {
    let mut total = 0;
    let mut current = opt;
    loop {
        match current {
            Some(value) => {
                total = total + value;
                current = None::<_>;
            }
            _ => {
                break;
            }
        }
    }
    return total;
}
