tests/snapshots/codegen_snapshot_tests__rfc052_module_static_storage.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[inline(always)]
pub(crate) fn __incan_init_module_statics() {
    static __INCAN_STATIC_INIT_RUNNING: std::sync::atomic::AtomicBool = std::sync::atomic::AtomicBool::new(
        false,
    );
    if __INCAN_STATIC_INIT_RUNNING.load(std::sync::atomic::Ordering::Acquire) {
        return;
    }
    static __INCAN_STATIC_INIT_ONCE: std::sync::OnceLock<()> = std::sync::OnceLock::new();
    __INCAN_STATIC_INIT_ONCE
        .get_or_init(|| {
            struct __IncanStaticInitGuard<'a>(&'a std::sync::atomic::AtomicBool);
            impl Drop for __IncanStaticInitGuard<'_> {
                fn drop(&mut self) {
                    self.0.store(false, std::sync::atomic::Ordering::Release);
                }
            }
            __INCAN_STATIC_INIT_RUNNING
                .store(true, std::sync::atomic::Ordering::Release);
            let _guard = __IncanStaticInitGuard(&__INCAN_STATIC_INIT_RUNNING);
            std::sync::LazyLock::force(&counter);
            std::sync::LazyLock::force(&items);
        });
}
static counter: std::sync::LazyLock<incan_stdlib::storage::StaticCell<i64>> = std::sync::LazyLock::new(||
incan_stdlib::storage::StaticCell::new(0));
static items: std::sync::LazyLock<incan_stdlib::storage::StaticCell<Vec<i64>>> = std::sync::LazyLock::new(||
incan_stdlib::storage::StaticCell::new(Vec::<i64>::new()));
fn main() {
    __incan_init_module_statics();
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    __incan_init_module_statics();
    let __incan_static_rhs = {
        __incan_init_module_statics();
        counter.get()
    } + 1;
    counter
        .with_mut(|__incan_static_value| {
            *__incan_static_value = __incan_static_rhs.into();
        });
    __incan_init_module_statics();
    let __incan_static_rhs = {
        __incan_init_module_statics();
        counter.get()
    } + 2;
    counter
        .with_mut(|__incan_static_value| {
            *__incan_static_value = __incan_static_rhs.into();
        });
    let _ = {
        let __incan_static_arg_0 = {
            __incan_init_module_statics();
            counter.get()
        };
        {
            __incan_init_module_statics();
            items
                .with_mut(|__incan_static_value| {
                    __incan_static_value.push(__incan_static_arg_0)
                })
        }
    };
    let mut live = {
        __incan_init_module_statics();
        incan_stdlib::storage::StaticBinding::from_static(&items)
    };
    let _ = {
        let __incan_static_arg_0 = 4;
        live.with_mut(|__incan_static_value| {
            __incan_static_value.push(__incan_static_arg_0)
        })
    };
    let _ = println!("{}", { __incan_init_module_statics(); counter.get() });
    let _ = println!(
        "{}", ::std::convert::identity({ __incan_init_module_statics(); items.get() }
        .len() as i64)
    );
    let _ = println!("{}", ::std::convert::identity(live.get().len() as i64));
}
