tests/snapshots/codegen_snapshot_tests__rfc052_pub_static.snap
---
source: tests/codegen_snapshot_tests.rs
expression: normalize_projected_symbols_for_readable_codegen(& rust_code)
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
use widgets::SHARED_ITEMS;
fn main() {
    std::panic::set_hook(
        std::boxed::Box::new(|panic_info| {
            if let Some(message) = panic_info.payload().downcast_ref::<&str>() {
                eprintln!("{message}");
            } else if let Some(message) = panic_info.payload().downcast_ref::<String>() {
                eprintln!("{message}");
            } else {
                eprintln!("generated program panicked");
            }
        }),
    );
    let _ = {
        let __incan_static_arg_0 = 1;
        {
            SHARED_ITEMS
                .with_mut(|__incan_static_value| {
                    __incan_static_value.push(__incan_static_arg_0)
                })
        }
    };
    let mut live = { incan_stdlib::storage::StaticBinding::from_static(&SHARED_ITEMS) };
    let _ = {
        let __incan_static_arg_0 = 2;
        live.with_mut(|__incan_static_value| {
            __incan_static_value.push(__incan_static_arg_0)
        })
    };
    let _ = println!(
        "{}", ::std::convert::identity({ SHARED_ITEMS.get() } .len() as i64)
    );
}
