tests/snapshots/codegen_snapshot_tests__rust_associated_call_in_elif.snap
---
source: tests/codegen_snapshot_tests.rs
expression: rust_code
---
// Generated by the Incan compiler v<INCAN_VERSION>

// __INCAN_INSERT_MODS__

incan_stdlib::__incan_stdlib_version_check!("<INCAN_STDLIB_VERSION>");
#[allow(unused_imports)]
pub use std::path::Path;
#[allow(dead_code)]
fn f(kind: String, output_uri: String) -> bool {
    if incan_stdlib::strings::str_eq(&kind, &"a") {
        return Path::new(&output_uri).exists();
    } else {
        if incan_stdlib::strings::str_eq(&kind, &"b") {
            return Path::new(&output_uri).exists();
        } else {
            return false;
        }
    }
}
